--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   "devDependencies": {
     "coveralls": "^3.0.4",
     "jest": "^24.8.0",
-    "moleculer": "^0.13.9"
+    "moleculer": "^0.13.9",
+    "nats": "^1.3.0"
   },
   "dependencies": {
     "ioredis": "^4.10.0",
     "lodash": "^4.17.11",
+    "secret-sharing.js": "^1.3.1",
     "uuid": "^3.3.2"
   }
 }
