--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "imicros-keys",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "author": "Andreas Leinen <andreas.leinen@imicros.de> (www.imicros.de)",
   "license": "MIT",
   "description": "Moleculer service for the imicros key store based on Redis database ",
   "main": "index.js",
   "scripts": {
     "lint": "eslint . --ext .js,.jsx",
-    "test": "jest --coverage --no-cache",
-    "test-local": "jest --coverage --no-cache --config=local.js"
+    "test": "jest --coverage --no-cache --silent",
+    "test-local": "jest --coverage --no-cache --config=local.js --silent",
+    "test-master": "jest --coverage --no-cache --config=local.js"
   },
   "jest": {
     "collectCoverageFrom": [
       "lib/*.js",
       "lib/util/*.js",
       "!lib/globals.js"
-    ]
+    ],
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
@@ -29,14 +31,14 @@
   ],
   "devDependencies": {
     "coveralls": "^3.1.0",
-    "jest": "^24.9.0",
-    "moleculer": "^0.13.13",
+    "jest": "^26.6.1",
     "nats": "^1.4.12"
   },
   "dependencies": {
-    "ioredis": "^4.17.3",
+    "ioredis": "^4.19.2",
     "lodash": "^4.17.20",
-    "secret-sharing.js": "^1.3.1",
-    "uuid": "^3.4.0"
+    "moleculer": "^0.14.6",
+    "secrets.js-grempe": "^2.0.0",
+    "uuid": "^8.3.1"
   }
 }
