--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "imicros-keys",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "author": "Andreas Leinen <andreas.leinen@imicros.de> (www.imicros.de)",
   "license": "MIT",
-  "description": "Moleculer service for the imicros key store based on Redis database ",
+  "description": "Moleculer service for the imicros key store based on Cassandra database ",
   "main": "index.js",
   "scripts": {
     "lint": "eslint . --ext .js,.jsx",
@@ -30,15 +30,17 @@
     "store"
   ],
   "devDependencies": {
-    "coveralls": "^3.1.0",
-    "jest": "^26.6.1",
+    "coveralls": "^3.1.1",
+    "jest": "^26.6.3",
     "nats": "^1.4.12"
   },
   "dependencies": {
-    "ioredis": "^4.19.2",
-    "lodash": "^4.17.20",
-    "moleculer": "^0.14.6",
+    "cassandra-driver": "^4.6.3",
+    "ioredis": "^4.27.9",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "moleculer": "^0.14.16",
     "secrets.js-grempe": "^2.0.0",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.2"
   }
 }
