--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,22 @@
 language: node_js
+dist: trusty
 
-services:
-  - redis-server
+sudo: required
 
 node_js:
   - stable
+
+services:
+  - cassandra
+
+before_script:
+- bash travis/setup_cassandra.sh
 
 install:
   - npm install
 
 script:
-  - npm test
+  - npm run test-travis
   
 # Send coverage data to Coveralls
 after_script:
@@ -22,3 +28,4 @@ notifications:
       - andreas.leinen@imicros.de
     on_success: never # default: change
     on_failure: always # default: always
+ 
