--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "imicros-keys",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "author": "Andreas Leinen <andreas.leinen@imicros.de> (www.imicros.de)",
   "license": "MIT",
   "description": "Moleculer service for the imicros key store based on Cassandra database ",
@@ -8,6 +8,7 @@
   "scripts": {
     "lint": "eslint . --ext .js,.jsx",
     "test": "jest --coverage --no-cache --silent --detectOpenHandles",
+    "test-travis": "jest --coverage --no-cache --config=travis.js --silent",
     "test-local": "jest --coverage --no-cache --config=local.js --silent  --detectOpenHandles",
     "test-master": "jest test/master.spec.js --coverage --no-cache --config=local.js --detectOpenHandles",
     "test-unseal": "jest test/unseal.spec.js --coverage --no-cache --config=local.js --detectOpenHandles"
